kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-event-booking-ayaankhan
