kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: online-event-booking-ayaankhan
  labels:
    app: booking-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: ayaankhan17/booking-service:c6daf204
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: online-event-booking-ayaankhan
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
