kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-event-service
  namespace: online-event-booking-ayaankhan
  labels:
    app: new-event-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: new-event-service
  template:
    metadata:
      labels:
        app: new-event-service
    spec:
      containers:
      - name: new-event-service
        image: ayaankhan17/event-service:66
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: new-event-service
  namespace: online-event-booking-ayaankhan
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: new-event-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: metrics
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
