kubernetes/deployment-service-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: online-event-booking-ayaankhan
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: online-event-booking-ayaankhan
spec:
  selector:
    app: mongodb
  ports:
  - name: mongodb-port
    port: 27017
    targetPort: 27017
  type: ClusterIP
