kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: online-event-booking-ayaankhan
  labels:
    app: notification-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: ayaankhan17/notification-service:e85bfa1f
        ports:
        - containerPort: 5002
        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: online-event-booking-ayaankhan
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5002"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: notification-service
  ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 5002
      - name: metrics
        protocol: TCP
        port: 5002
        targetPort: 5002
  type: ClusterIP
