kubernetes/deployment-service-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: online-event-booking-ayaankhan
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        - name: postgres-init
          mountPath: /docker-entrypoint-initdb.d
          readOnly: true
      volumes:
      - name: postgres-storage
        emptyDir: {} 
      - name: postgres-init
        configMap:
          name: app-config
          items:
          - key: init.sql
            path: init.sql
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: online-event-booking-ayaankhan
spec:
  selector:
    app: postgres
  ports:
  - name: postgres-port
    port: 5432
    targetPort: 5432
  type: ClusterIP
